fix gap on the page

--- a/css/style.css
+++ b/css/style.css
@@ -133,7 +133,7 @@ main {
     grid-template-columns: repeat(4, 1fr);
 }
 
-.grid, .grid-4, .flex {
+.grid, .grid-4, .flex, .gap-20 {
     gap: 20px;
 }
 
